deploy/k8s/apps/python-api/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
  namespace: app
  labels:
    app: python-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-api
  template:
    metadata:
      labels:
        app: python-api
    spec:
      containers:
        - name: python-api
          image: ciaa/python-api:mypassword
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "2000Mi"
            requests:
              memory: "2000Mi"
              cpu: "2000m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
