deploy/k8s/apps/python-api/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-api
  namespace: app
spec:
  selector:
    app: python-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
